# SQRS-NotesApp

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  locustfile.py  pyproject.toml  radon.py
backend/: .env.example  Dockerfile  alembic.ini  config.py  exc.py  logger.py  main.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 2025_05_05_0839-47605fb6295d_initial.py  2025_05_05_0841-beb2a16e8e61_add_user_model.py  2025_05_05_1827-e156db346906_add_notes_table.py  2025_05_05_2103-9962bc117de5_add_token_table.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  notes.py  status.py  translation.py
backend/app/models/: __init__.py  helper.py  note.py  token.py  user.py
backend/app/repository/: note.py  token.py  user.py
backend/app/schemas/: note.py  response.py  token.py  translation.py  user.py
backend/app/services/: auth.py  cache.py  notes.py  redis.py  response_middleware.py  security.py  status.py  timing_middleware.py  translation.py
backend/tests/: conftest.py
backend/tests/unit/api/: test_translation_endpoints.py
backend/tests/unit/repository/: test_note.py  test_token.py  test_user.py
backend/tests/unit/services/: test_auth.py  test_notes.py  test_security.py  test_translation.py
frontend/: package.json
frontend/src/: App.js  setupTests.js
frontend/src/__mocks__/: react-router-dom.js
frontend/src/pages/Create/: Create.js  Create.test.js  style.css
frontend/src/pages/Edit/: Edit.js  Edit.test.js  style.css
frontend/src/pages/Login/: Login.js  Login.test.js  style.css
frontend/src/pages/Notes/: Notes.js  Notes.test.js  style.css
frontend/src/routes/: AppRoutes.js
frontend/src/style/: style.css
hooks/: README.md  commit-msg  commit-msg.py
