[project]
name = "NotesApp"
version = "0.1.0"
description = "Simple Notes Application"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
show-fixes = true

lint.select = [
    "E",     # Error
    "F",     # Pyflakes
    "I",     # Isort
    "W",     # Pycodestyle
]

exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
    "venv",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
